--- a/firestone.html
+++ b/firestone.html
@@ -21,6 +21,7 @@
 	        <li><a href="tchat.html">tchat</a></li>
           <li><a href="html.html">html</a></li>
           <li><a href="firestone.html">firestone</a></li>
+         <li><a href="plateformer hardcore.html">plateformer hardcore</a></li
         </center>
         </ul>
       </nav>
