--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <li><a href="html.html">html</a></li>
           <li><a href="firestone.html">frestone</a></li>
 	  <li><a href="galaxio.html">galaxio</a></li>
+    <li><a href="plateformer hardcore.html">plateformer hardcore</a></li>
         </center>
         </ul>
       </nav>
