--- a/membre.html
+++ b/membre.html
@@ -19,6 +19,8 @@
 	        <li><a href="membre.html">membres</a></li>
 	        <li><a href="tchat.html">tchat</a></li>
           <li><a href="html.html">html</a></li>
+		  <li><a href="firestone.html">firestone</a></li>
+		  <li><a href="plateformer hardcore.html">plateformer hardcore</a></li>
           </center>
         </ul>
       </nav>
