--- a/construction minecraft.html
+++ b/construction minecraft.html
@@ -8,6 +8,7 @@
     <header>
       <nav>
         <ul>
+	<center>
           <li><a href="index.html">accueil</a></li>
           <li><a href="info.html">info</a></li>
           <li><a href="music.html">music</a></li>
@@ -19,6 +20,7 @@
           <li><a href="html.html">html</a></li>
           <li><a href="firestone.html">firestone</a></li>
     <li><a href="plateformer hardcore.html">plateformer hardcore</a></li>
+    <center>
         </ul>
       </nav>
     </header>
