--- a/tchat.html
+++ b/tchat.html
@@ -9,6 +9,7 @@
     <header>
       <nav>
         <ul>
+	<center>
           <li><a href="index.html">accueil</a></li>
           <li><a href="info.html">info</a></li>
           <li><a href="music.html">music</a></li>
@@ -20,6 +21,7 @@
           <li><a href="html.html">html</a></li>
           <li><a href="firestone.html">firestone</a></li>
     <li><a href="plateformer hardcore.html">plateformer hardcore</a></li>
+    <center>
         </ul>
       </nav>
     </header>
