--- a/html.html
+++ b/html.html
@@ -20,6 +20,7 @@
 	        <li><a href="tchat.html">tchat</a></li>
           <li><a href="html.html">html</a></li>
           <li><a href="firestone.html">firestone</a></li>
+	  <li><a href="galaxio.html">galaxio</a></li>
     <li><a href="plateformer hardcore.html">plateformer hardcore</a></li>
           </center>
         </ul>
