--- a/index.html
+++ b/index.html
@@ -6,9 +6,28 @@
     <link rel="icon" href="ressources/images/logo.jpg">
     <link rel="stylesheet" type="text/css" href="style.min.css">
   </head>
+    <header>
+      <nav>
+        <ul>
+          <center>
+          <li><a href="index.html">accueil</a></li>
+          <li><a href="info.html">info</a></li>
+          <li><a href="music.html">music</a></li>
+          <li><a href="constructio minnecraft.html">construction minecraft</a></li>
+          <li><a href="minecraft.html">truc minecraft</a></li>
+	        <li><a href="register.html">register</a></li>
+	        <li><a href="membre.html">membres</a></li>
+	        <li><a href="tchat.html">tchat</a></li>
+          <li><a href="html.html">html</a></li>
+          <li><a href="firestone.html">firestone</a></li>
+	  <li><a href="galaxio.html">galaxio</a></li>
+         <li><a href="plateformer hardcore.html">plateformer hardcore</a></li
+        </center>
+        </ul>
+      </nav>
+    </header>
   <body>
   <main>
-      <iframe src="lien.html" height="1059" width="2000"></iframe>
       <h1 class="zoom-text">Bienvenue sur chill-pote</h1>
       <p>Venez les potes</p>
       <p>Bonjour. Ce site web est fait principalement pour discuter et partager des trucs etc. Il y a aussi des <a href="music.html">musics</a>, des <a href="construction minecraft.html">constructions minecraft</a>, des <a href="info.html">infos</a> sur le site et aussi une page pour <a href="register.html">créer un compte</a> et une page avec <a href="membre.html">tous les membres du site</a>. Il y a aussi des <a href="minecraft.html">trucs minecraft</a> et des <a href="membre.html">membres</a> et un système pour s'<a href="register.html">enregister</a>.</p> 
