--- a/firestone.html
+++ b/firestone.html
@@ -7,27 +7,8 @@
     <link rel="stylesheet" type="text/css" href="style.min.css">
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <center>
-          <li><a href="index.html">accueil</a></li>
-          <li><a href="info.html">info</a></li>
-          <li><a href="music.html">music</a></li>
-          <li><a href="constructio minnecraft.html">construction minecraft</a></li>
-          <li><a href="minecraft.html">truc minecraft</a></li>
-	        <li><a href="register.html">register</a></li>
-	        <li><a href="membre.html">membres</a></li>
-	        <li><a href="tchat.html">tchat</a></li>
-          <li><a href="html.html">html</a></li>
-          <li><a href="firestone.html">firestone</a></li>
-	  <li><a href="galaxio.html">galaxio</a></li>
-         <li><a href="plateformer hardcore.html">plateformer hardcore</a></li
-        </center>
-        </ul>
-      </nav>
-    </header>
     <main>
+	 <iframe src="lien.html" height="1059" width="2000"></iframe>
       <h1 class="zoom-text">Bienvenue sur firestone</h1>
       <p>ici il y a un jeux connecte toi ou crée toi un compte et rejoin l'aventure.</p>
       <p>les aide sont en bas.</p>
