--- a/construction minecraft.html
+++ b/construction minecraft.html
@@ -5,27 +5,8 @@
     <link rel="icon" href="ressources/images/logo.jpg">
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-	<center>
-          <li><a href="index.html">accueil</a></li>
-          <li><a href="info.html">info</a></li>
-          <li><a href="music.html">music</a></li>
-          <li><a href="construction minecraft.html">constructions minecraft</a></li>
-          <li><a href="minecraft.html">truc minecraft</a></li>
-	        <li><a href="register.html">register</a></li>
-	        <li><a href="membre.html">membres</a></li>
-	        <li><a href="tchat.html">tchat</a></li>
-          <li><a href="html.html">html</a></li>
-          <li><a href="firestone.html">firestone</a></li>
-	  <li><a href="galaxio.html">galaxio</a></li>
-    <li><a href="plateformer hardcore.html">plateformer hardcore</a></li>
-    <center>
-        </ul>
-      </nav>
-    </header>
     <main>
+	 <iframe src="lien.html" height="300" width="200"></iframe>
       <h1>Bienvenue sur constructions minecraft. Là où on met des constructions minecraft. N'hésitez pas à m'envoyer vos constructions; je noterai le pseudo de la personne qui m'en aura envoyés.</h1>
       <p>source = <a href="https://cultureasiatique.fr/le-guilde-ultime-pour-faire-des-constructions-japonaises-dans-minecraft/">https://cultureasiatique.fr/le-guilde-ultime-pour-faire-des-constructions-japonaises-dans-minecraft/</a></p>
       <img src="ressources/images/le-guilde-ultime-pour-faire-des-constructions-japonaises-dans-minecraft-1536x864.jpeg">
