--- a/html.html
+++ b/html.html
@@ -6,27 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style.min.css">
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <center>
-          <li><a href="index.html">accueil</a></li>
-          <li><a href="info.html">info</a></li>
-          <li><a href="music.html">music</a></li>
-          <li><a href="construction minecraft.html">construction minecraft</a></li>
-          <li><a href="minecraft.html">truc minecraft</a></li>
-	        <li><a href="register.html">register</a></li>
-	        <li><a href="membre.html">membres</a></li>
-	        <li><a href="tchat.html">tchat</a></li>
-          <li><a href="html.html">html</a></li>
-          <li><a href="firestone.html">firestone</a></li>
-	  <li><a href="galaxio.html">galaxio</a></li>
-    <li><a href="plateformer hardcore.html">plateformer hardcore</a></li>
-          </center>
-        </ul>
-      </nav>
-    </header>
     <main>
+	 <iframe src="lien.html" height="300" width="200"></iframe>
         <h1 class="zoom-text">Bienvenue sur html. Ici on met des commandes qui peuvent servir pour créer son site en html.</h1>
         <p>Une commande assez utilisée pour mettre un titre: h1 entourée de < >. Ça va créer un /h1 et entre le h1 et le /h1 vous écrivez votre titre; puis il va s'écrire en gros, un peu comme le bienvenue sur html en haut.</p>
         <p>Une autre commande: si vous souhaitez mettre du texte en sautant une ligne, il vous suffit de mettre le p entouré de < > également; ça va créer /p; puis entre les deux, ça va écrire le texte en sautant une ligne (cette colonne et celle du haut sont écrites avec p).</p>
