--- a/plateformer hardcore.html
+++ b/plateformer hardcore.html
@@ -7,31 +7,12 @@
     <link rel="stylesheet" type="text/css" href="style.min.css">
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <center>
-          <li><a href="index.html">accueil</a></li>
-          <li><a href="info.html">info</a></li>
-          <li><a href="music.html">music</a></li>
-          <li><a href="construction minnecraft.html">constructions minecraft</a></li>
-          <li><a href="minecraft.html">truc minecraft</a></li>
-	        <li><a href="register.html">register</a></li>
-	        <li><a href="membre.html">membres</a></li>
-	        <li><a href="tchat.html">tchat</a></li>
-          <li><a href="html.html">html</a></li>
-          <li><a href="firestone.html">frestone</a></li>
-	  <li><a href="galaxio.html">galaxio</a></li>
-    <li><a href="plateformer hardcore.html">plateformer hardcore</a></li>
+	 <iframe src="lien.html" height="300" width="200"></iframe>
       <iframe src="https://gd.games/instant-builds/74793577-6d4e-4e36-99f4-c745f2e951fe" height="1059" width="2000">
       </iframe>
       <h1 class="zoom-text">aide</h1>
-            <p>sautr dans le vide apres l'endroit avec les monstres.<p>
-        </center>
-        </ul>
-      </nav>
-    </header>
-    <main>
+            <p>saute dans le vide apres l'endroit avec les monstres.<p>
+      <main>
       <h1 class="zoom-text">Bienvenue sur plateformer hardcore bonne chance pour réussir le parkours <h1>
     </main>
     <footer>
