--- a/register.html
+++ b/register.html
@@ -6,27 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style.min.css">
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <center>
-          <li><a href="index.html">accueil</a></li>
-          <li><a href="info.html">info</a></li>
-          <li><a href="music.html">music</a></li>
-          <li><a href="construction minecraft.html">construction minecraft</a></li>
-          <li><a href="minecraft.html">truc minecraft</a></li>
-	        <li><a href="register.html">register</a></li>
-	        <li><a href="membre.html">membres</a></li>
-	        <li><a href="tchat.html">tchat</a></li>
-          <li><a href="html.html">html</a></li>
-          <li><a href="firestone.html">firestone</a></li>
-	  <li><a href="galaxio.html">galaxio</a></li>
-    <li><a href="plateformer hardcore.html">plateformer hardcore</a></li>
-          </center>
-        </ul>
-      </nav>
-    </header>
     <main>
+	 <iframe src="lien.html" height="300" width="200"></iframe>
       <h1 class="zoom-text">Bienvenue sur register. Remplissez ce formulaire d'inscription, si vous voulez faire partie du site.</h1>
 	      <p>Si vous souhaitez vous inscrire vous pouvez cliquer sur <a href="https://docs.google.com/forms/d/e/1FAIpQLSciDDdmwT4B47Zv3kwSbmmp2TgIV70sUAhBLwn5ewI5MeOEtw/viewform?usp=sf_link">le lien</a> juste en dessous</p>
 	      <a href="https://docs.google.com/forms/d/e/1FAIpQLSciDDdmwT4B47Zv3kwSbmmp2TgIV70sUAhBLwn5ewI5MeOEtw/viewform?usp=sf_link">https://docs.google.com/forms/d/e/1FAIpQLSciDDdmwT4B47Zv3kwSbmmp2TgIV70sUAhBLwn5ewI5MeOEtw/viewform?usp=sf_link</a>
