--- a/lien.html
+++ b/lien.html
@@ -11,18 +11,18 @@
       <nav>
         <ul>
           <center>
-          <li><a href="index.html">accueil</a></li>
-          <li><a href="info.html">info</a></li>
-          <li><a href="music.html">music</a></li>
-          <li><a href="construction minnecraft.html">constructions minecraft</a></li>
-          <li><a href="minecraft.html">truc minecraft</a></li>
-	  <li><a href="register.html">register</a></li>
-	  <li><a href="membre.html">membres</a></li>
-	  <li><a href="tchat.html">tchat</a></li>
-          <li><a href="html.html">html</a></li>
-          <li><a href="firestone.html">frestone</a></li>
-	  <li><a href="galaxio.html">galaxio</a></li>
-          <li><a href="plateformer hardcore.html">plateformer hardcore</a></li>
+        <a href="index.html">accueil</a>
+        <a href="info.html">info</a>
+        <a href="music.html">music</a>
+        <a href="construction minnecraft.html">constructions minecraft</a>
+        <a href="minecraft.html">truc minecraft</a>
+	<a href="register.html">register</a>
+	<a href="membre.html">membres</a>
+	<a href="tchat.html">tchat</a>
+        <a href="html.html">html</a>
+        <a href="firestone.html">frestone</a>
+	<a href="galaxio.html">galaxio</a>
+        <a href="plateformer hardcore.html">plateformer hardcore</a>
         </center>
         </ul>
       </nav>
