--- a/html.html
+++ b/html.html
@@ -6,8 +6,27 @@
     <link rel="stylesheet" type="text/css" href="style.min.css">
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+         <center>
+        <a href="index.html">accueil</a>
+        <a href="info.html">info</a>
+        <a href="music.html">music</a>
+        <a href="construction minnecraft.html">constructions minecraft</a>
+        <a href="minecraft.html">truc minecraft</a>
+	<a href="register.html">register</a>
+	<a href="membre.html">membres</a>
+	<a href="tchat.html">tchat</a>
+        <a href="html.html">html</a>
+        <a href="firestone.html">frestone</a>
+	<a href="galaxio.html">galaxio</a>
+        <a href="plateformer hardcore.html">plateformer hardcore</a>
+        </center>
+        </ul>
+      </nav>
+    </header>
     <main>
-	 <iframe src="lien.html" height="300" width="200"></iframe>
         <h1 class="zoom-text">Bienvenue sur html. Ici on met des commandes qui peuvent servir pour créer son site en html.</h1>
         <p>Une commande assez utilisée pour mettre un titre: h1 entourée de < >. Ça va créer un /h1 et entre le h1 et le /h1 vous écrivez votre titre; puis il va s'écrire en gros, un peu comme le bienvenue sur html en haut.</p>
         <p>Une autre commande: si vous souhaitez mettre du texte en sautant une ligne, il vous suffit de mettre le p entouré de < > également; ça va créer /p; puis entre les deux, ça va écrire le texte en sautant une ligne (cette colonne et celle du haut sont écrites avec p).</p>
