--- a/index.html
+++ b/index.html
@@ -7,8 +7,27 @@
     <link rel="stylesheet" type="text/css" href="style.min.css">
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+         <center>
+        <a href="index.html">accueil</a>
+        <a href="info.html">info</a>
+        <a href="music.html">music</a>
+        <a href="construction minnecraft.html">constructions minecraft</a>
+        <a href="minecraft.html">truc minecraft</a>
+	<a href="register.html">register</a>
+	<a href="membre.html">membres</a>
+	<a href="tchat.html">tchat</a>
+        <a href="html.html">html</a>
+        <a href="firestone.html">frestone</a>
+	<a href="galaxio.html">galaxio</a>
+        <a href="plateformer hardcore.html">plateformer hardcore</a>
+        </center>
+        </ul>
+      </nav>
+    </header>
   <main>
-	 <iframe src="lien.html" height="300" width="200"></iframe>
       <h1 class="zoom-text">Bienvenue sur chill-pote</h1>
       <p>Venez les potes</p>
       <p>Bonjour. Ce site web est fait principalement pour discuter et partager des trucs etc. Il y a aussi des <a href="music.html">musics</a>, des <a href="construction minecraft.html">constructions minecraft</a>, des <a href="info.html">infos</a> sur le site et aussi une page pour <a href="register.html">créer un compte</a> et une page avec <a href="membre.html">tous les membres du site</a>. Il y a aussi des <a href="minecraft.html">trucs minecraft</a> et des <a href="membre.html">membres</a> et un système pour s'<a href="register.html">enregister</a>.</p> 
