--- a/info.html
+++ b/info.html
@@ -6,8 +6,27 @@
     <link rel="stylesheet" type="text/css" href="style.min.css">
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+         <center>
+        <a href="index.html">accueil</a>
+        <a href="info.html">info</a>
+        <a href="music.html">music</a>
+        <a href="construction minnecraft.html">constructions minecraft</a>
+        <a href="minecraft.html">truc minecraft</a>
+	<a href="register.html">register</a>
+	<a href="membre.html">membres</a>
+	<a href="tchat.html">tchat</a>
+        <a href="html.html">html</a>
+        <a href="firestone.html">frestone</a>
+	<a href="galaxio.html">galaxio</a>
+        <a href="plateformer hardcore.html">plateformer hardcore</a>
+        </center>
+        </ul>
+      </nav>
+    </header>
     <main>
-	 <iframe src="lien.html" height="300" width="200"></iframe>
       <h1 class="zoom-text">Infos du site</h1>
       <p>10-bonjour info du 06/04/2023 à 14:45, présentée par <pan style="color: red;">Kikilikiki</pan> | La page index a été mise à jour avec les nouvelles pages rajoutées (register et membres). Vous pouvez maintenant avoir accès à toutes les pages à partir de la page d'accueil (comme avant, mais avec les nouvelles pages). Si vous avez des questions a propos du site: soit <span style="color: red;">kikilikiki, xoulou93, psbricoleur</span>, soit des personnes qui aiment bien le site pourront répondre (les plus rapides à répondre en général sont les <span style="color: red;">admins</span>).</p>
       <p>9-bonjour info du 04/04/2023 à 18:00, présentée par <span style="color: red;"> Kikilikiki</span> | J'ai 2 info pour vous. 1: des couleurs ont été rajoutées sur plusieus pages. 2: Nous accueillons un tout nouvel admin nommé psbricoleur.</p>
