--- a/membre.html
+++ b/membre.html
@@ -6,8 +6,27 @@
     <link rel="stylesheet" type="text/css" href="style.min.css">
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+         <center>
+        <a href="index.html">accueil</a>
+        <a href="info.html">info</a>
+        <a href="music.html">music</a>
+        <a href="construction minnecraft.html">constructions minecraft</a>
+        <a href="minecraft.html">truc minecraft</a>
+	<a href="register.html">register</a>
+	<a href="membre.html">membres</a>
+	<a href="tchat.html">tchat</a>
+        <a href="html.html">html</a>
+        <a href="firestone.html">frestone</a>
+	<a href="galaxio.html">galaxio</a>
+        <a href="plateformer hardcore.html">plateformer hardcore</a>
+        </center>
+        </ul>
+      </nav>
+    </header>
     <main>
-	 <iframe src="lien.html" height="300" width="200"></iframe>
       <h1 class="zoom-text">Bienvenue à l'endroit des membres</h1>
       <p>Si vous voulez vous inscrire ou vous désinscrire merci d'aller sur <a href="register.html">register</a></p><br>
       <h1 style="color:red;">admin</h1>
