--- a/plateformer hardcore.html
+++ b/plateformer hardcore.html
@@ -6,8 +6,27 @@
     <link rel="icon" href="ressources/images/logo.jpg">
     <link rel="stylesheet" type="text/css" href="style.min.css">
   </head>
+    <header>
+      <nav>
+        <ul>
+         <center>
+        <a href="index.html">accueil</a>
+        <a href="info.html">info</a>
+        <a href="music.html">music</a>
+        <a href="construction minnecraft.html">constructions minecraft</a>
+        <a href="minecraft.html">truc minecraft</a>
+	<a href="register.html">register</a>
+	<a href="membre.html">membres</a>
+	<a href="tchat.html">tchat</a>
+        <a href="html.html">html</a>
+        <a href="firestone.html">frestone</a>
+	<a href="galaxio.html">galaxio</a>
+        <a href="plateformer hardcore.html">plateformer hardcore</a>
+        </center>
+        </ul>
+      </nav>
+    </header>
   <body>
-	 <iframe src="lien.html" height="300" width="200"></iframe>
       <iframe src="https://gd.games/instant-builds/74793577-6d4e-4e36-99f4-c745f2e951fe" height="1059" width="2000">
       </iframe>
       <h1 class="zoom-text">aide</h1>
