--- a/register.html
+++ b/register.html
@@ -6,8 +6,27 @@
     <link rel="stylesheet" type="text/css" href="style.min.css">
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+         <center>
+        <a href="index.html">accueil</a>
+        <a href="info.html">info</a>
+        <a href="music.html">music</a>
+        <a href="construction minnecraft.html">constructions minecraft</a>
+        <a href="minecraft.html">truc minecraft</a>
+	<a href="register.html">register</a>
+	<a href="membre.html">membres</a>
+	<a href="tchat.html">tchat</a>
+        <a href="html.html">html</a>
+        <a href="firestone.html">frestone</a>
+	<a href="galaxio.html">galaxio</a>
+        <a href="plateformer hardcore.html">plateformer hardcore</a>
+        </center>
+        </ul>
+      </nav>
+    </header>
     <main>
-	 <iframe src="lien.html" height="300" width="200"></iframe>
       <h1 class="zoom-text">Bienvenue sur register. Remplissez ce formulaire d'inscription, si vous voulez faire partie du site.</h1>
 	      <p>Si vous souhaitez vous inscrire vous pouvez cliquer sur <a href="https://docs.google.com/forms/d/e/1FAIpQLSciDDdmwT4B47Zv3kwSbmmp2TgIV70sUAhBLwn5ewI5MeOEtw/viewform?usp=sf_link">le lien</a> juste en dessous</p>
 	      <a href="https://docs.google.com/forms/d/e/1FAIpQLSciDDdmwT4B47Zv3kwSbmmp2TgIV70sUAhBLwn5ewI5MeOEtw/viewform?usp=sf_link">https://docs.google.com/forms/d/e/1FAIpQLSciDDdmwT4B47Zv3kwSbmmp2TgIV70sUAhBLwn5ewI5MeOEtw/viewform?usp=sf_link</a>
