--- a/tchat.html
+++ b/tchat.html
@@ -6,8 +6,27 @@
     <link rel="stylesheet" type="text/css" href="style.min.css">
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+         <center>
+        <a href="index.html">accueil</a>
+        <a href="info.html">info</a>
+        <a href="music.html">music</a>
+        <a href="construction minnecraft.html">constructions minecraft</a>
+        <a href="minecraft.html">truc minecraft</a>
+	<a href="register.html">register</a>
+	<a href="membre.html">membres</a>
+	<a href="tchat.html">tchat</a>
+        <a href="html.html">html</a>
+        <a href="firestone.html">frestone</a>
+	<a href="galaxio.html">galaxio</a>
+        <a href="plateformer hardcore.html">plateformer hardcore</a>
+        </center>
+        </ul>
+      </nav>
+    </header>
     <main>
-	 <iframe src="lien.html" height="300" width="200"></iframe>
       <h1 class="zoom-text">Bienvenue sur tchat. Vous pouvez envoyer des messages.</h1>
 	      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeTTzpygNiu5Qi3LSgNhHvWeEU7lYwuQCzIDiRj3ShTv8b5mQ/viewform?embedded=true" width="640" height="572" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
 	      <iframe src="https://docs.google.com/spreadsheets/d/1gp9pJjg3EsySEJoa6BFiMgkdE3PGDSF8izqDxMjx_mM/edit?usp=sharing" height="1059" width="1199">
