--- a/music.html
+++ b/music.html
@@ -8,20 +8,18 @@
     <header>
       <nav>
         <ul>
-          <center>
-          <li><a href="index.html">accueil</a></li>
-          <li><a href="info.html">info</a></li>
-          <li><a href="music.html">music</a></li>
-          <li><a href="construction minecraft.html">construction minecraft</a></li>
-          <li><a href="minecraft.html">truc minecraft</a></li>
-	        <li><a href="register.html">register</a></li>
-	        <li><a href="membre.html">membres</a></li>
-	        <li><a href="tchat.html">tchat</a></li>
-          <li><a href="html.html">html</a></li>
-          <li><a href="firestone.html">firestone</a></li>
-	  <li><a href="galaxio.html">galaxio</a></li>
-    <li><a href="plateformer hardcore.html">plateformer hardcore</a></li>
-          </center>
+          <a href="index.html">accueil</a>
+          <a href="info.html">info</a>
+          <a href="music.html">music</a>
+          <li><a href="construction minecraft.html">construction minecraft</a>
+          <li><a href="minecraft.html">truc minecraft</a>
+	       <a href="register.html">register</a>
+		  <a href="membre.html">membres</a>
+	        <a href="tchat.html">tchat</a>
+          <a href="html.html">html</a>
+          <a href="firestone.html">firestone</a>
+	  <a href="galaxio.html">galaxio</a>
+    <a href="plateformer hardcore.html">plateformer hardcore</a>
         </ul>
       </nav>
     </header>
