--- a/music.html
+++ b/music.html
@@ -8,11 +8,12 @@
     <header>
       <nav>
         <ul>
+	<center>
           <a href="index.html">accueil</a>
           <a href="info.html">info</a>
           <a href="music.html">music</a>
-          <li><a href="construction minecraft.html">construction minecraft</a>
-          <li><a href="minecraft.html">truc minecraft</a>
+          <a href="construction minecraft.html">construction minecraft</a>
+          <a href="minecraft.html">truc minecraft</a>
 	       <a href="register.html">register</a>
 		  <a href="membre.html">membres</a>
 	        <a href="tchat.html">tchat</a>
@@ -20,6 +21,7 @@
           <a href="firestone.html">firestone</a>
 	  <a href="galaxio.html">galaxio</a>
     <a href="plateformer hardcore.html">plateformer hardcore</a>
+		</center>
         </ul>
       </nav>
     </header>
