--- a/info.html
+++ b/info.html
@@ -28,6 +28,7 @@
     </header>
     <main>
       <h1 class="zoom-text">Infos du site</h1>
+      <p>11-bonjour info du 05/05/2023 à 08:50, présentée par <span style="color: red;">Kikilikiki</span> | une nouvelle page nommé <a href="plateformer hardcore.html">plateformer hardcore</a> est apparue c'est une page pour jouer a un jeux que j'ai crée grace a gdevlop de parkours trés dur comme le dit sont nom vous me dirais combien vous avait fait.
       <p>10-bonjour info du 06/04/2023 à 14:45, présentée par <pan style="color: red;">Kikilikiki</pan> | La page index a été mise à jour avec les nouvelles pages rajoutées (register et membres). Vous pouvez maintenant avoir accès à toutes les pages à partir de la page d'accueil (comme avant, mais avec les nouvelles pages). Si vous avez des questions a propos du site: soit <span style="color: red;">kikilikiki, xoulou93, psbricoleur</span>, soit des personnes qui aiment bien le site pourront répondre (les plus rapides à répondre en général sont les <span style="color: red;">admins</span>).</p>
       <p>9-bonjour info du 04/04/2023 à 18:00, présentée par <span style="color: red;"> Kikilikiki</span> | J'ai 2 info pour vous. 1: des couleurs ont été rajoutées sur plusieus pages. 2: Nous accueillons un tout nouvel admin nommé psbricoleur.</p>
       <p>8-bonjour info du 03/04/2023 à 16:50, présentée par <span style="color: red;"> Kikilikiki</span> | Une nouvelle page a été rajoutée; elle se nomme trucs minecraft. Allez la voir; on y met des serveurs minecraft et des joueurs minecraft.</p>
