--- a/info.html
+++ b/info.html
@@ -22,6 +22,7 @@
         <a href="firestone.html">frestone</a>
 	<a href="galaxio.html">galaxio</a>
         <a href="plateformer hardcore.html">plateformer hardcore</a>
+           <a href="vidéo youtube.html">vidéo youtube</a>
         </center>
         </ul>
       </nav>
