--- a/music.html
+++ b/music.html
@@ -21,6 +21,7 @@
           <a href="firestone.html">firestone</a>
 	  <a href="galaxio.html">galaxio</a>
     <a href="plateformer hardcore.html">plateformer hardcore</a>
+           <a href="vidéo youtube.html">vidéo youtube</a>
 		</center>
         </ul>
       </nav>
