--- a/membre.html
+++ b/membre.html
@@ -13,7 +13,7 @@
         <a href="index.html">accueil</a>
         <a href="info.html">info</a>
         <a href="music.html">music</a>
-        <a href="construction minnecraft.html">constructions minecraft</a>
+        <a href="construction minecraft.html">constructions minecraft</a>
         <a href="minecraft.html">truc minecraft</a>
 	<a href="register.html">register</a>
 	<a href="membre.html">membres</a>
