--- a/construction minecraft.html
+++ b/construction minecraft.html
@@ -12,7 +12,7 @@
         <a href="index.html">accueil</a>
         <a href="info.html">info</a>
         <a href="music.html">music</a>
-        <a href="construction minnecraft.html">constructions minecraft</a>
+        <a href="construction minecraft.html">constructions minecraft</a>
         <a href="minecraft.html">truc minecraft</a>
 	<a href="register.html">register</a>
 	<a href="membre.html">membres</a>
@@ -27,7 +27,7 @@
       </nav>
     </header>
     <main>
-      <h1>Bienvenue sur constructions minecraft. Là où on met des constructions minecraft. N'hésitez pas à m'envoyer vos constructions; je noterai le pseudo de la personne qui m'en aura envoyés.</h1>
+      <h1 class="zoom-text">Bienvenue sur constructions minecraft. Là où on met des constructions minecraft. N'hésitez pas à m'envoyer vos constructions; je noterai le pseudo de la personne qui m'en aura envoyés.</h1>
       <p>source = <a href="https://cultureasiatique.fr/le-guilde-ultime-pour-faire-des-constructions-japonaises-dans-minecraft/">https://cultureasiatique.fr/le-guilde-ultime-pour-faire-des-constructions-japonaises-dans-minecraft/</a></p>
       <img src="ressources/images/le-guilde-ultime-pour-faire-des-constructions-japonaises-dans-minecraft-1536x864.jpeg">
     </main>
