--- a/vidéo youtube.html
+++ b/vidéo youtube.html
@@ -31,6 +31,14 @@
   <main>
       <h1 class="zoom-text">Bienvenue sur vidéo youtube ici vous allez regarder des vidéo youtube</h1>
     <iframe width="790" height="444" src="https://www.youtube.com/embed/AD1s42oSUoo" title="La langue la plus parlée au monde (la vraie) 🤔" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	  <iframe width="442" height="785" src="https://www.youtube.com/embed/mp7B6fh5nWY" title="THE VOICE VERSION PAYS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	  <iframe width="442" height="785" src="https://www.youtube.com/embed/mp7B6fh5nWY" title="THE VOICE VERSION PAYS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	  <iframe width="442" height="785" src="https://www.youtube.com/embed/6DGrBKmku9s" title="Le monde a un incroyable talent 🌍" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	  <iframe width="442" height="785" src="https://www.youtube.com/embed/cAmH5_P3GhM" title="Les PAYS où il y a le PLUS de POULETS ? 🐔" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	  <iframe width="442" height="785" src="https://www.youtube.com/embed/dvrplgpPxrU" title="L&#39;ALLEMAGNE M&#39;A DIT" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	  <iframe width="442" height="785" src="https://www.youtube.com/embed/-qYDEYAtnkA" title="Si les pays étaient en couple..." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	  <iframe width="442" height="785" src="https://www.youtube.com/embed/R4YzZ-aZvkc" title="DEVINE LE PAYS... (mais attention car...)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	  
     </main>
     <footer>
       <center><br>
