--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <p>Venez les potes</p>
       <p>Bonjour. Ce site web est fait principalement pour discuter et partager des trucs etc. Il y a aussi des <a href="music.html">musics</a>, des <a href="construction minecraft.html">constructions minecraft</a>, des <a href="info.html">infos</a> sur le site et aussi une page pour <a href="register.html">créer un compte</a> et une page avec <a href="membre.html">tous les membres du site</a>. Il y a aussi des <a href="minecraft.html">trucs minecraft</a> et des <a href="membre.html">membres</a> et un système pour s'<a href="register.html">enregister</a>.</p> 
       <p>Petite info rapide: les admins sont en <span style="color: red;">rouge (vous verrez à plusieurs endroits).</p>
+	  <p>merci.</p>
     </main>
     <footer>
       <center><br>
