--- a/galaxio.html
+++ b/galaxio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>chill pote | acceuil
+    <title>chill pote | galaxio
     </title>
     <link rel="icon" href="ressources/images/logo.jpg">
     <link rel="stylesheet" type="text/css" href="style.min.css">
