--- a/register.html
+++ b/register.html
@@ -32,10 +32,8 @@
 	      <p>Si vous souhaitez vous inscrire vous pouvez cliquer sur <a href="https://docs.google.com/forms/d/e/1FAIpQLSciDDdmwT4B47Zv3kwSbmmp2TgIV70sUAhBLwn5ewI5MeOEtw/viewform?usp=sf_link">le lien</a> juste en dessous</p>
 	      <a href="https://docs.google.com/forms/d/e/1FAIpQLSciDDdmwT4B47Zv3kwSbmmp2TgIV70sUAhBLwn5ewI5MeOEtw/viewform?usp=sf_link">https://docs.google.com/forms/d/e/1FAIpQLSciDDdmwT4B47Zv3kwSbmmp2TgIV70sUAhBLwn5ewI5MeOEtw/viewform?usp=sf_link</a>
       	<br>
-	      <p>Si vous voulez vous désinscire, merci de remplir le formulaire en dessous</p>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfRmSge9ah1Et35tzj3a4XupNgnzNaLupLQQwfBXAUXZnHByQ/viewform?embedded=true" width="640" height="780" frameborder="0" marginheight="0" marginwidth="0">Chargement…
-          
-        </iframe>
+	      <p>Si vous voulez vous désinscire, merci de remplir <a href="https://forms.gle/QqJoCcovk1adRD5s9">le formulaire en dessous</a></p>
+	      <a href="https://forms.gle/QqJoCcovk1adRD5s9">https://forms.gle/QqJoCcovk1adRD5s9</a>
       </main>
      <footer>
       <center><br>
