--- a/construction minecraft.html
+++ b/construction minecraft.html
@@ -27,7 +27,8 @@
       </nav>
     </header>
     <main>
-      <h1 class="zoom-text">Bienvenue sur constructions minecraft. Là où on met des constructions minecraft. N'hésitez pas à m'envoyer vos constructions; je noterai le pseudo de la personne qui m'en aura envoyés.</h1>
+      <h1 class="zoom-text">Bienvenue sur constructions minecraft.</h1>
+	    <p>Ici où on met des constructions minecraft. N'hésitez pas à m'envoyer vos constructions; je noterai le pseudo de la personne qui me l'aura envoyés.</p>
       <p>source = <a href="https://cultureasiatique.fr/le-guilde-ultime-pour-faire-des-constructions-japonaises-dans-minecraft/">https://cultureasiatique.fr/le-guilde-ultime-pour-faire-des-constructions-japonaises-dans-minecraft/</a></p>
       <img src="ressources/images/le-guilde-ultime-pour-faire-des-constructions-japonaises-dans-minecraft-1536x864.jpeg">
     </main>
