--- a/info.html
+++ b/info.html
@@ -29,16 +29,7 @@
     </header>
     <main>
       <h1 class="zoom-text">Infos du site</h1>
-      <p>10-bonjour info du 06/04/2023 à 14:45, présentée par <pan style="color: red;">Kikilikiki</pan> | La page index a été mise à jour avec les nouvelles pages rajoutées (register et membres). Vous pouvez maintenant avoir accès à toutes les pages à partir de la page d'accueil (comme avant, mais avec les nouvelles pages). Si vous avez des questions a propos du site: soit <span style="color: red;">kikilikiki, xoulou93, psbricoleur</span>, soit des personnes qui aiment bien le site pourront répondre (les plus rapides à répondre en général sont les <span style="color: red;">admins</span>).</p>
-      <p>9-bonjour info du 04/04/2023 à 18:00, présentée par <span style="color: red;"> Kikilikiki</span> | J'ai 2 info pour vous. 1: des couleurs ont été rajoutées sur plusieus pages. 2: Nous accueillons un tout nouvel admin nommé psbricoleur.</p>
-      <p>8-bonjour info du 03/04/2023 à 16:50, présentée par <span style="color: red;"> Kikilikiki</span> | Une nouvelle page a été rajoutée; elle se nomme trucs minecraft. Allez la voir; on y met des serveurs minecraft et des joueurs minecraft.</p>
-      <p>7-bonjour info du 02/04/2023 à 09:56, présentée par <span style="color: red;"> Kikilikiki</span> | C'est bon; les 2 pages que je créais hier sont sorties. Vous pouvez allez les voir si vous le souhaitez.</p>
-      <p>6-bonjour info du 01/04/2023 à 15:10, présentée par <span style="color: red;"> Kikilikiki</span> | Je rajoute une page pour rejoindre le site et une page pour voir les membres du site.</p>
-      <p>5-bonjour info du 10/03/2023 à 13:02, présentée par <span style="color: red;"> Kikilikiki</span> | Une nouvelle page est dispo. N'hesitez pas à aller la voir pour écouter des musics. Envoyez-moi les vôtres que je les rajouterai.</p>
-      <p>4-bonjour info du 10/03/2023 à 12:55, présentée par <span style="color: red;"> Kikilikiki</span> | Une nouvelle page où on pourra écouter de la music est en train d'être créée.</p>
-      <p>3-bonjour info du 09/03/2023 à 14:50, présentée par <span style="color: red;"> Kikilikiki</span> | La nouvelle page constructions minecraft est terminée. Vous pouvez y allez et voir des images que vous m'avez envoyées ou que j'ai créées ou alors que j'ai trouvées sur le web. Si vous m'envoyez des images de constructions minecraft, je noterai le pseudo de la personne qui la envoyée.</p>
-      <p>2-bonjour info du 09/03/2023 à 12:43, présentée par <span style="color: red;"> Kikilikiki</span> | Il y a une nouvelle page en cours, elle sera pour les constructions minecraft que vous m'envoyez ou que j'ai créées je mettrai aussi le pseudo de la personne qui l'a crée. ATTENTION : SI UNE PERSONNE PRENNENT UNE CONSTRUCTION DE QUELQU'UN A DEJA CREE, LA PHOTO SERA SUPRIMEE.</p>
-      <p>1-Bienvenue sur chill pote. Le site où on discute entre potes. N'hesitez pas à poser des questions sur le site.</p>
+      <iframe src="https://docs.google.com/spreadsheets/d/19qpthnKH7Wq8Fa6Qm-v6201XYWgxixUeG9lg_Ycl0b4/edit?usp=sharing" height="1059" width="1199"></iframe>
     </main>
         <footer>
       <center><br>
