--- a/membre.html
+++ b/membre.html
@@ -37,6 +37,8 @@
 	<img src="ressources/images/avatar.jpg">
   <p style="color: red;">psbricoleur</p>
   <img src="ressources/images/avatar.jpg">
+	    <p style="color: red;">chat gpt</p>
+	    <img src="ressources/images/logo chat gpt.jpg">
 	<h1 style="color: blue;">non admin</h1>
     </main>
     <footer>
