--- a/construction minecraft.html
+++ b/construction minecraft.html
@@ -5,6 +5,14 @@
     <link rel="icon" href="ressources/images/logo.jpg">
   </head>
   <body>
+      <p id="datetime"></p>
+      <script>
+    setInterval(function() {
+      var currentDateTime = new Date();
+      var datetimeElement = document.getElementById("datetime");
+      datetimeElement.innerHTML = currentDateTime.toLocaleString();
+    }, 1000); // Mettre à jour toutes les secondes
+  </script>
     <header>
      <nav>
         <ul>
