--- a/plateformer hardcore.html
+++ b/plateformer hardcore.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>chill pote | plateformer hardcore
-    </title>
+    <title>chill pote | plateformer hardcore </title>
     <link rel="icon" href="ressources/images/logo.jpg">
     <link rel="stylesheet" type="text/css" href="style.min.css">
   </head>
+  <body>
+      <p id="datetime"></p>
+      <script>
+    setInterval(function() {
+      var currentDateTime = new Date();
+      var datetimeElement = document.getElementById("datetime");
+      datetimeElement.innerHTML = currentDateTime.toLocaleString();
+    }, 1000); // Mettre à jour toutes les secondes
+  </script>
     <header>
       <nav>
         <ul>
@@ -27,7 +35,6 @@
         </ul>
       </nav>
     </header>
-  <body>
       <iframe src="https://gd.games/instant-builds/74793577-6d4e-4e36-99f4-c745f2e951fe" height="1059" width="2000">
       </iframe>
       <h1 class="zoom-text">aide</h1>
