--- a/register.html
+++ b/register.html
@@ -38,8 +38,7 @@
     <main>
       <h1 class="zoom-text">Bienvenue sur register. Remplissez ce formulaire d'inscription, si vous voulez faire partie du site.</h1>
 	      <p>Si vous souhaitez vous inscrire vous pouvez cliquer sur <a href="https://docs.google.com/forms/d/e/1FAIpQLSciDDdmwT4B47Zv3kwSbmmp2TgIV70sUAhBLwn5ewI5MeOEtw/viewform?usp=sf_link">le lien</a> juste en dessous</p>
-	      <a href="https://docs.google.com/forms/d/e/1FAIpQLSciDDdmwT4B47Zv3kwSbmmp2TgIV70sUAhBLwn5ewI5MeOEtw/viewform?usp=sf_link">https://docs.google.com/forms/d/e/1FAIpQLSciDDdmwT4B47Zv3kwSbmmp2TgIV70sUAhBLwn5ewI5MeOEtw/viewform?usp=sf_link</a>
-      	<br>
+	      <a href="https://docs.google.com/forms/d/e/1FAIpQLSciDDdmwT4B47Zv3kwSbmmp2TgIV70sUAhBLwn5ewI5MeOEtw/viewform?usp=sf_link">https://docs.google.com/forms/d/e/1FAIpQLSciDDdmwT4B47Zv3kwSbmmp2TgIV70sUAhBLwn5ewI5MeOEtw/viewform?usp=sf_link</a><br><br>
 	      <p>Si vous voulez vous désinscire, merci de remplir <a href="https://forms.gle/QqJoCcovk1adRD5s9">le formulaire en dessous</a></p>
 	      <a href="https://forms.gle/QqJoCcovk1adRD5s9">https://forms.gle/QqJoCcovk1adRD5s9</a>
       </main>
