--- a/info.html
+++ b/info.html
@@ -31,6 +31,7 @@
 	      <a href="galaxio.html">galaxio</a>
         <a href="plateformer hardcore.html">plateformer hardcore</a>
         <a href="vidéo youtube.html">vidéo youtube</a>
+           <a href="demande rôle chill-pote.html">demande devenir administrateur</a>
         </center>
         </ul>
       </nav>
