--- a/demande rôle chill-pote.html
+++ b/demande rôle chill-pote.html
@@ -37,7 +37,8 @@
       </nav>
     </header>
     <main>
-      <h1 class="zoom-text">Bienvenue sur tchat. Vous pouvez envoyer des messages.</h1>
+      <h1 class="zoom-text">Bienvenue sur demande devenir administrateur</h1>
+	    <p>. remplicer le formulaire si vous voulez travailler avec nous.</p>
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf220SbdAxjwqIfMFiT6O94kjcu8pEdkcy6OP1-imM9xiys1Q/viewform?embedded=true" width="640" height="1525" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
         </iframe>
     </main>
