--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     </header>
   <main>
       <h1 class="zoom-text">Bienvenue sur chill-pote</h1>
-      <p>Venez les potes</p>
-      <p>Bonjour. Ce site web est fait principalement pour discuter et partager des trucs etc. Il y a aussi des <a href="music.html">musics</a>, des <a href="construction minecraft.html">constructions minecraft</a>, des <a href="info.html">infos</a> sur le site et aussi une page pour <a href="register.html">créer un compte</a> et une page avec <a href="membre.html">tous les membres du site</a>. Il y a aussi des <a href="minecraft.html">trucs minecraft</a> et des <a href="membre.html">membres</a> et un système pour s'<a href="register.html">enregister</a>.</p> 
+      <p>Venez les potes.</p>
+    <p>Bonjour. Voici un site nommé chill-pote ici on disscute vous pouvez vour enregistrer essayer de devenir administrateur ou autre il y a aussi des construction minecraft des truc minecraft des music que vous pouvez écouter 2 jeux vidéo 1 nommé firestone (frestone) et un autre nommé plateformer hardcore que <span style="color red;">kikilikiki</span> a crée tout seul grace a gdevlop il y a aussi un tchat une page d'astronomie une page ou je mais des commande html qui peuvent être utile au gens et une page d'information (allez la voir s'il vous plait).</p>
       <p>Petite info rapide: les admins sont en <span style="color: red;">rouge (vous verrez à plusieurs endroits).</p>
     </main>
     <footer>
