--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <main>
       <h1 class="zoom-text">Bienvenue sur chill-pote</h1>
       <p>Venez les potes.</p>
-    <p>Bonjour. Voici un site nommé chill-pote ici on disscute vous pouvez vour enregistrer essayer de devenir administrateur ou autre il y a aussi des construction minecraft des truc minecraft des music que vous pouvez écouter il y a aussi un tchat une page d'astronomie une page ou je mais des commande html qui peuvent être utile au gens et une page d'information (allez la voir s'il vous plait)  il y a aussi 2 jeux vidéo 1 nommé firestone (frestone) et un autre nommé plateformer hardcore que <span style="color red;">kikilikiki</span> a crée tout seul grace a gdevlop.</p>
+    <p>Bonjour. Voici un site nommé chill-pote ici on disscute vous pouvez vour enregistrer essayer de devenir administrateur ou autre il y a aussi des construction minecraft des truc minecraft des music que vous pouvez écouter il y a aussi un tchat une page d'astronomie une page ou je mais des commande html qui peuvent être utile au gens et une page d'information (allez la voir s'il vous plait)  il y a aussi 2 jeux vidéo 1 nommé firestone (frestone) et un autre nommé plateformer hardcore que <span style="color red;">kikilikiki a crée tout seul grace a gdevlop.</p>
       <p>Petite info rapide: les admins sont en <span style="color: red;">rouge (vous verrez à plusieurs endroits).</p>
     </main>
     <footer>
