--- a/construction minecraft.html
+++ b/construction minecraft.html
@@ -31,6 +31,7 @@
         <a href="plateformer hardcore.html">plateformer hardcore</a>
         <a href="vidéo youtube.html">vidéo youtube</a>
            <a href="demande rôle chill-pote.html">demande devenir administrateur</a>
+           <a href="contact.html">contact</a>
         </center>
         </ul>
       </nav>
