--- a/membre.html
+++ b/membre.html
@@ -48,7 +48,7 @@
   <p style="color: red;">psbricoleur</p>
   <img src="ressources/images/avatar.jpg">
 	    <p style="color: red;">chat gpt</p>
-	    <img src="ressources/images/logo chat gpt.jpg">
+	    <img src="ressources/images/logo chat gpt.png">
 	<h1 style="color: blue;">non admin</h1>
     </main>
     <footer>
