--- a/membre.html
+++ b/membre.html
@@ -42,6 +42,7 @@
       <p>Si vous voulez vous inscrire ou vous désinscrire merci d'aller sur <a href="register.html">register</a></p><br>
 	    <h1 style="color:red;">créateur</h1>
 	    <p style="color: red;">Kikilikiki</p>
+	<img src="ressources/images/tokyo_ghoul.jpg">
       <h1 style="color:green;">administrateur</h1>
 	<img src="ressources/images/tokyo_ghoul.jpg">
 	<p style="color: red;">Xoulou93</p>
@@ -51,10 +52,15 @@
 	    <p style="color: red;">chat gpt</p>
 	    <img src="ressources/images/logo chat gpt.png">
 	    <h1 style="color: yellow;">Annonceur</h1>
-	    <h1 style="color: violet;">Info du site</h1>
+	    <p style="color: yellow;">Kikilikiki</p>
+	<img src="ressources/images/tokyo_ghoul.jpg">
 	    <h1 style="color: brown;">animateur</h1>
-	    <h1 style="color: pink;">candidature</h1>
-	    <h1 style="orange;">inscription</h1>
+	    <h1 style="color: pink;">candidature administrateur et autre</h1>
+	    <p style="color: red;">Kikilikiki</p>
+	<img src="ressources/images/tokyo_ghoul.jpg">
+	    <h1 style="orange;">inscription non admin</h1>
+	    <p style="color: red;">Kikilikiki</p>
+	<img src="ressources/images/tokyo_ghoul.jpg">
 	<h1 style="color: blue;">non admin</h1>
     </main>
     <footer>
