--- a/membre.html
+++ b/membre.html
@@ -47,7 +47,7 @@
 	<p style="color: red;">Xoulou93</p>
 	<img src="ressources/images/avatar.jpg">
   <p style="color: red;">psbricoleur</p>
-  <img src="ressources/images/avatar.jpg">
+  <img src="ressources/images/logo psbricoleur.png">
 	    <p style="color: red;">chat gpt</p>
 	    <img src="ressources/images/logo chat gpt.png">
 	    <h1 style="color: yellow;">Annonceur</h1>
