--- a/membre.html
+++ b/membre.html
@@ -44,11 +44,11 @@
 	    <p style="color: red;">Kikilikiki</p>
 	<img src="ressources/images/tokyo_ghoul.jpg">
       <h1 style="color:green;">administrateur</h1>
-	<p style="color: red;">Xoulou93</p>
+	<p style="color: green;">Xoulou93</p>
 	<img src="ressources/images/avatar.jpg">
-  <p style="color: red;">psbricoleur</p>
+  <p style="color: green;">psbricoleur</p>
   <img src="ressources/images/logo psbricoleur.png">
-	    <p style="color: red;">chat gpt</p>
+	    <p style="color: green;">chat gpt</p>
 	    <img src="ressources/images/logo chat gpt.png">
 	    <h1 style="color: yellow;">Annonceur</h1>
 	    <p style="color: yellow;">Kikilikiki</p>
