--- a/membre.html
+++ b/membre.html
@@ -41,8 +41,10 @@
       <h1 class="zoom-text">Bienvenue à l'endroit des membres</h1>
       <p>Si vous voulez vous inscrire ou vous désinscrire merci d'aller sur <a href="register.html">register</a></p><br>
 	    <h1 style="color:red;">créateur</h1>
+	    <p style="color: red;">chill-pote</p>
+	    <img src="ressources/images/logo.png">
 	    <p style="color: red;">Kikilikiki</p>
-	<img src="ressources/images/logo.jpg">
+	<img src="ressources/images/tokyo_ghoul.jpg">
       <h1 style="color:green;">administrateur</h1>
 	<p style="color: green;">Xoulou93</p>
 	<img src="ressources/images/avatar.jpg">
