--- a/sponsors.html
+++ b/sponsors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>chill pote | (nom de la page)
+    <title>chill pote | sponsors
     </title>
     <link rel="icon" href="ressources/images/logo.jpg">
     <link rel="stylesheet" type="text/css" href="style.min.css">
@@ -34,13 +34,12 @@
         <a href="vidéo youtube.html">vidéo youtube</a>
            <a href="demande rôle chill-pote.html">demande devenir administrateur</a>
            <a href="contact.html">contact</a>
-           <a href="sponsors.html"></a>
         </center>
         </ul>
       </nav>
     </header>
   <main>
-      <h1 class="zoom-text">Bienvenue sur (nom de la page)</h1>
+      <h1 class="zoom-text">Bienvenue et merci pour les sponsors </h1>
     </main>
     <footer>
       <center><br>
