--- a/membre.html
+++ b/membre.html
@@ -28,11 +28,12 @@
       	<a href="tchat.html">tchat</a>
         <a href="html.html">html</a>
         <a href="firestone.html">frestone</a>
-	      <a href="galaxio.html">galaxio</a>
+	     <a href="galaxio.html">galaxio</a>
         <a href="plateformer hardcore.html">plateformer hardcore</a>
         <a href="vidéo youtube.html">vidéo youtube</a>
            <a href="demande rôle chill-pote.html">demande devenir administrateur</a>
            <a href="contact.html">contact</a>
+		 <a href="sponsors.html">sponcors</a>
         </center>
         </ul>
       </nav>
