Update demande rôle chill-pote.html

--- a/demande rôle chill-pote.html
+++ b/demande rôle chill-pote.html
@@ -34,6 +34,7 @@
            <a href="demande rôle chill-pote.html">demande devenir administrateur</a>
            <a href="contact.html">contact</a>
 	 <a href="sponsors.html"></a>
+		 <a href="sponsors.html">sponsors</a>
             </center>
         </ul>
       </nav>
